Start container with akka and start leader